--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
      <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <div class="header">
-    <p>Header</p>
-  </div>
-
-  <div class="navbar">
-    <p>Navigation Menu</p>
-</div>
-<section >
+    <header class="header">
+        <p>Header</p>
+    </header>
+    <nav class="navbar">
+        <p>Navigation Menu</p>
+ </nav>
+<main>
     <div class="main">
     <aside class="left">
         <p>Content</p>
@@ -24,8 +23,7 @@
     </aside>
         <aside class="right">
             <p>Content</p>
-</section>
-</div>
+        </main>
 <footer class="dq">
     <p> Footer</p>
 </footer>
