--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Navigation Menu</p>
  </nav>
 <main>
-    <div class="main">
+    <aside class="main">
     <aside class="left">
         <p>Content</p>
     </aside>
