--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <nav class="navbar">
         <p>Navigation Menu</p>
  </nav>
-<main>
-    <aside class="main">
+<main class="main">
     <aside class="left">
         <p>Content</p>
     </aside>
